Update Hebrew and French content in index.html

--- a/index.html
+++ b/index.html
@@ -287,13 +287,24 @@ const content = {
   he: {
     direction: "rtl",
     title: "ד״ר בנימין ריינשטיין",
-    subtitle: "טיפול שיניים בירושלים",
+    subtitle: "טיפולי שיניים בירושלים",
     tabEmergencies: "עזרה ראשונה",
     tabAbout: "אודות המרפאה",
     emergencyIntroTitle: "המרפאה זמינה עבורך",
     emergencyIntroText: "כאב שיניים אינו מחכה לשעות העבודה הרגילות. אנו כאן, עם ניסיון רב בטיפולי חירום דנטליים, כדי לספק מענה מקצועי ומהיר לכל מקרה דחוף בשעות הערב ובסופי השבוע.",
     clinicTitle: "אודות המרפאה שלנו",
-    clinicText: "מרפאתו של ד״ר ריינשטיין מציעה טיפולי שיניים מתקדמים באווירה רגועה ומקצועית במרכז ירושלים.",
+    clinicText: `
+  במרפאה שלנו תיהנו מטיפולי שיניים מתקדמים באווירה רגועה, עם יחס אישי ודגש על נוחות המטופל.<br><br>
+  אנו מתמחים בטיפולים משמרים, שיקומים, טיפולים כירורגיים והשתלות – בעזרת ציוד חדיש ושיטות עדכניות לשיפור חוויית הטיפול, הפונקציה והאסתטיקה של החיוך שלך.<br><br>
+  <b>אודות ד"ר ריינשטיין:</b>
+  <ul style="padding-right: 20px;">
+    <li><b>ד"ר בנימין ריינשטיין</b> בוגר תואר ראשון במדעים ביו-רפואים (B.Sc) ותואר ד"ר לרפואת שיניים (DMD) מהפקולטה לרפואת שיניים של האוניברסיטה העברית והדסה עין-כרם בירושלים.</li>
+    <li>לאורך השנים עבר מספר השתלמויות בשיקום הפה, טיפולי שורש מורכבים, חידושי טיפולי שורש ועקירות כירורגיות במסגרת המחלקות השונות בבית החולים שיבא.</li>
+    <li>חבר בעמותה הישראלית להשתלות דנטליות.</li>
+    <li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על הקמה וניהול של שתי מרפאות צבאיות.</li>
+  </ul>
+  ד"ר ריינשטיין מאמין ברפואת שיניים מקצועית, רגישה ומדויקת – עם מגע אנושי שמעניק ביטחון וחיוך.
+`,
     servicesTitle: "שירותי חירום",
     services: [
       { title: "כאבי שיניים", desc: "טיפול מיידי בכאב חד או מתמשך." },
@@ -336,7 +347,7 @@ const content = {
 
   fr: {
     direction: "ltr",
-    title: "Dr Benjamin Reinstein",
+    title: "Dr. Benjamin Reinstein",
     subtitle: "Soins dentaires à Jérusalem",
     tabEmergencies: "Urgences Dentaires",
     tabAbout: "À Propos de la Clinique",
