Update favicon SVG and description text
Updated the favicon SVG and modified the text description for Dr. Rainshtain.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title id="page-title">ד״ר בנימין ריינשטיין</title>
 
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path d=%22M30,20 Q50,10 70,20 Q85,30 80,50 Q75,85 50,90 Q25,85 20,50 Q15,30 30,20 Z%22 fill=%22none%22 stroke=%22%230056b3%22 stroke-width=%225%22/></svg>">
-  
+ <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><path d=%22M30,25 C30,15 70,15 70,25 C70,45 60,60 60,85 C50,95 40,85 40,85 C40,60 30,45 30,25%22 fill=%22%230056b3%22/></svg>">
 <style>
 /* GLOBAL RESET */
 html, body {
@@ -322,7 +321,7 @@ const content = {
         <li>חבר בעמותה הישראלית להשתלות דנטליות.</li>
         <li>זוכה הצטיינות מפקד המרכז לשירותי רפואה של צה"ל על הקמה וניהול של שתי מרפאות צבאיות.</li>
       </ul>
-      ד"ר ריינשטיין מאמין ברפואת שיניים מקצועית, רגישה ומדויקת – עם מגע אנושי שמעניק ביטחון וחיוך.
+      ד"ר בנימין מאמין ברפואת שיניים משמרת ומקצועית לצד אווירה רגועה.
     `,
     servicesTitle: "שירותי חירום",
     services: [
